--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,56 +1,47 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
-.main
-{
-  font-family: 'Open Sans', sans-serif;
+.main {
+  font-family: "Open Sans", sans-serif;
   height: 100vh;
   width: 100%;
-  background-color: #FBFBFB;
+  background-color: #fbfbfb;
 }
-.mainpage
-{
+.mainpage {
   height: 100vh;
- 
 }
-.list
-{
+.list {
   width: 60%;
-  /* height: max-content; */
   overflow: hidden;
   padding: 1em;
- }
-.sidebar
-{
-  background: linear-gradient(#EB6B9D, #FF5757);
 }
-.navigation:hover
-{
+.sidebar {
+  height: 100vh;
+  background: linear-gradient(#eb6b9d, #ff5757);
+}
+.navigation:hover {
   background-color: rgba(217, 217, 217, 0.15);
 }
-.newBooking
-{
-  background: linear-gradient(#FB8085, #FF5757);
+.newBooking {
+  background: linear-gradient(#fb8085, #ff5757);
 }
-.pfp
-{
+.pfp {
   margin-right: 1em;
 }
-.bottom
-{
+.bottom {
   height: 3px;
-  
+
   background-color: #ff5757b6;
 }
 
-.target:focus-within::after { 
-  content:""; 
-  float:left; 
-  background:#FF5757; 
-  width:100%; 
-  height:6px; 
+.target:focus-within::after {
+  content: "";
+  float: left;
+  background: #ff5757;
+  width: 100%;
+  height: 6px;
   border-radius: 3px;
 }
 .pagination {
@@ -82,40 +73,32 @@
 
 .pagination__link--active a {
   color: black;
-
 }
 
 .pagination__link--disabled a {
   color: rgb(198, 197, 202);
   border: 1px solid rgb(198, 197, 202);
 }
-.display_table
-{
+.display_table {
   text-align: center;
   border-radius: 20px;
-  border: 1px solid rgb(0, 0, 0,0.1);
-  
-  margin: 1em auto;
+  border: 1px solid rgb(0, 0, 0, 0.1);
 
+  margin: 1em auto;
 }
-.heading
-{ 
+.heading {
   text-align: center;
- padding: 1em;
- background-color: rgba(217, 217, 217, 0.3);
+  padding: 1em;
+  background-color: rgba(217, 217, 217, 0.3);
   width: 100%;
   display: flex;
   justify-content: space-between;
-
 }
-.heading span
-{
+.heading span {
   width: 100%;
-  font-weight: bold ;
+  font-weight: bold;
 }
-.table_row
-{
- 
+.table_row {
   margin: 1em auto;
   text-align: center;
   width: 100%;
@@ -123,34 +106,115 @@
   padding: 0.6em 1em;
   justify-content: space-between;
   align-items: center;
- 
 }
 
-.scrollBox
-{
+.scrollBox {
   overflow-y: scroll;
-  
 }
-.table_row span
-{
+.table_row span {
   width: 100%;
 }
 
-.name
-{
+.name {
   align-items: center;
   display: flex;
   justify-content: space-between;
 }
-.online
-{
-  background: #35DBA2;
+.online {
+  background: #35dba2;
   border-radius: 20px;
   color: white;
 }
-.offline
-{
-  background: #FFCA28;
+.offline {
+  background: #ffca28;
   border-radius: 20px;
   color: white;
+}
+
+/* Tab to Desktop */
+@media screen and (min-width: 768px) and (max-width: 1025px) {
+  .box1 {
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .search {
+    justify-content: space-between;
+    padding: 0.5em 1em;
+  }
+  .search input {
+    width: 75%;
+  }
+  .search input::placeholder {
+    font-size: 2vw;
+  }
+  .optionBox {
+    font-size: 0.75rem;
+    padding: 1em;
+  }
+  .location {
+    width: 12px;
+  }
+  .optionBox label {
+    font-size: 0.8rem;
+  }
+  .list {
+    width: 100%;
+    padding: 0;
+  }
+
+  .display_table {
+    margin: 0 0.5em;
+  }
+}
+/* Mobile to tablet */
+@media screen and (min-width: 375px) and (max-width: 768px) {
+  .box1 {
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .search {
+    justify-content: space-between;
+    padding: 0.5em 1em;
+  }
+  .search input {
+    width: 75%;
+  }
+  .search input::placeholder {
+    font-size: 2vw;
+  }
+  .icon2 {
+    width: 10px;
+  }
+  .newBooking {
+    width: 30%;
+    font-size: 0.5rem;
+    padding: 0 0.5em;
+  }
+  .newBooking h1 {
+    font-size: 0.6rem;
+  }
+  .box2 {
+    font-size: 0.5rem;
+    width: 30%;
+  }
+  .optionBox {
+    font-size: 0.75rem;
+    padding: 1em;
+  }
+  .location {
+    width: 12px;
+  }
+  .optionBox label {
+    font-size: 0.8rem;
+  }
+
+  .list {
+    width: 100%;
+    padding: 0;
+  }
+  .display_table {
+    margin: 0 0.5em;
+  }
 }
